--- a/index.html
+++ b/index.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="layout">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="leftPanel">
+            <div class="Hero">
+                <span>DashBoard</span>
+            </div>
+            <div class="firstOptions">
+                <box>Home</box>
+                <box>Profile</box>
+                <box>Messages</box>
+                <box>History</box>
+                <box>Tasks</box>
+                <box>Communities</box>
+            </div>
+            <div class="secondOptions">
+                <box>Settings</box>
+                <box>Support</box>
+                <box>Privacy</box>
+            </div>
+
+        </div>
+        <div class="header">
+            <box>
+                <div class="search">
+                    <svg class="searchButton" viewBox="0 0 24 24">
+                        <path fill="currentColor"
+                            d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                    </svg>
+                    <input type="text" placeholder="Search..">
+
+                </div>
+
+            </box>
+
+        </div>
+        <div class="middleSection"></div>
+        <div class="rightSection"></div>
     </div>
 </body>
+
 </html>
