--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
                     <p>Privacy</p>
                 </box>
             </div>
-
+            <footer>
+                <p>Odin Project © 2022</p>
+                <a style="color:white" href="https://www.flaticon.com/free-icons/odin" title="odin icons">Odin icons
+                    created by Freepik - Flaticon</a>
+            </footer>
         </div>
         <div class="header">
             <box class="firstLineHeader">
@@ -132,44 +136,99 @@
             <h2>Your Projects</h2>
         </div>
         <div class="middleTitleRight">
-            <h2>Annoncements</h2>
+            <h2>Announcements</h2>
         </div>
 
+        <div class="middleSection">
+            <box>
+                <p class="title"><strong>Project</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            </box>
+            <box>
+                <p class="title"><strong>Project</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            </box>
+            <box>
+                <p class="title"><strong>Project</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            </box>
+            <box>
+                <p class="title"><strong>Project</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            </box>
+            <box>
+                <p class="title"><strong>Project</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            </box>
+            <box>
+                <p class="title"><strong>Project</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            </box>
+        </div>
+        <div class="rightSection">
 
-
-    <div class="middleSection">
-        <box>
-            <p class="title"><strong>Project</strong></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </box>
-        <box>
-            <p class="title"><strong>Project</strong></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </box>
-        <box>
-            <p class="title"><strong>Project</strong></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </box>
-        <box>
-            <p class="title"><strong>Project</strong></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </box>
-        <box>
-            <p class="title"><strong>Project</strong></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </box>
-        <box>
-            <p class="title"><strong>Project</strong></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </box>
-    </div>
-    <div class="rightSection"></div>
+            <div class="topPart">
+                <box class="top">
+                    <h4>Site Maintenance</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit iaculis lectus, non
+                        vestibulum sem scelerisque a.</p>
+                </box>
+                <box class="middle">
+                    <h4>Community Share Day</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit iaculis lectus, non
+                        vestibulum sem scelerisque a.</p>
+                </box>
+                <box>
+                    <h4>Updated Privacy Policy</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit iaculis lectus, non
+                        vestibulum sem scelerisque a.</p>
+                </box>
+            </div>
+            <div class="bottomPart">
+                <h2>Trending</h2>
+                <div class="icon">
+                    <box>
+                        <img src="/images/drakkar.png" alt="">
+                        <div class="text">
+                            <p style="font-size:1.5vh"><strong><a href="https://www.flaticon.com/free-icons/viking"
+                                        title="viking icons">Viking icons created by Eucalyp - Flaticon</a></strong></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </box>
+                    <box>
+                        <img src="/images/skull.png" alt="">
+                        <div class="text">
+                            <p style="font-size:1.5vh"><strong><a href="https://www.flaticon.com/free-icons/nordic"
+                                        title="nordic icons">Nordic icons created by Freepik - Flaticon</a></strong></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </box>
+                    <box>
+                        <img src="/images/viking.png" alt="">
+                        <div class="text">
+                            <p style="font-size:1.5vh"><strong><a href="https://www.flaticon.com/free-icons/cultures"
+                                        title="cultures icons">Cultures icons created by Freepik - Flaticon</a></strong>
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </box>
+                    <box>
+                        <img src="/images/viking _2.png" alt="">
+                        <div class="text">
+                            <p style="font-size:1.5vh"><strong><a href="https://www.flaticon.com/free-icons/viking"
+                                        title="viking icons">Viking icons created by Freepik - Flaticon</a></strong></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </box>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
