fixed img loading error

--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                         <path fill="currentColor"
                             d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" />
                     </svg>
-                    <img src="/images/odin.png" alt="odinIcon">
+                    <img src="./images/odin.png" alt="odinIcon">
                     <h2>Morgan Oakley</h2>
                 </div>
             </box>
             <box class="secondLineHeader">
                 <div class="secondLineLeft">
-                    <img src="/images/odin.png" alt="odinIcon">
+                    <img src="./images/odin.png" alt="odinIcon">
                     <div class="hello">
                         <p><strong>Hi there,</strong></p>
                         <h3>Morgan Oakley (@morgan)</h3>
@@ -194,7 +194,7 @@
                 <h2>Trending</h2>
                 <div class="icon">
                     <box>
-                        <img src="/images/drakkar.png" alt="">
+                        <img src="./images/drakkar.png" alt="">
                         <div class="text">
                             <p style="font-size:1.5vh"><strong><a href="https://www.flaticon.com/free-icons/viking"
                                         title="viking icons">Viking icons created by Eucalyp - Flaticon</a></strong></p>
@@ -202,7 +202,7 @@
                         </div>
                     </box>
                     <box>
-                        <img src="/images/skull.png" alt="">
+                        <img src="./images/skull.png" alt="">
                         <div class="text">
                             <p style="font-size:1.5vh"><strong><a href="https://www.flaticon.com/free-icons/nordic"
                                         title="nordic icons">Nordic icons created by Freepik - Flaticon</a></strong></p>
@@ -210,7 +210,7 @@
                         </div>
                     </box>
                     <box>
-                        <img src="/images/viking.png" alt="">
+                        <img src="./images/viking.png" alt="">
                         <div class="text">
                             <p style="font-size:1.5vh"><strong><a href="https://www.flaticon.com/free-icons/cultures"
                                         title="cultures icons">Cultures icons created by Freepik - Flaticon</a></strong>
@@ -219,7 +219,7 @@
                         </div>
                     </box>
                     <box>
-                        <img src="/images/viking _2.png" alt="">
+                        <img src="./images/viking _2.png" alt="">
                         <div class="text">
                             <p style="font-size:1.5vh"><strong><a href="https://www.flaticon.com/free-icons/viking"
                                         title="viking icons">Viking icons created by Freepik - Flaticon</a></strong></p>
